# Rocket_Local_Library

./: Cargo.toml  README.md
src/: .main.rs.swp  main.rs  mongo_repository.rs
src/controllers/: author_controller.rs  book_controller.rs  book_instance_controller.rs  genre_controller.rs  index_controller.rs  mod.rs
src/date_utils/: date_utility.rs  mod.rs
src/models/: author.rs  book.rs  book_instance.rs  book_status.rs  decorated_author.rs  decorated_book.rs  decorated_book_instance.rs  decorated_book_with_genre.rs  decorated_genre.rs  documentable.rs  expanded_book.rs  expanded_book_instance.rs  expanded_book_with_genre.rs  genre.rs  mod.rs
src/repositories/: author_collection.rs  book_collection.rs  book_instance_collection.rs  coll_utility.rs  genre_collection.rs  mod.rs
src/responses/: mod.rs  template_or_status_response.rs
templates/: author_detail.html.tera  authors_list.html.tera  base_generic.html.tera  book_detail.html.tera  bookinstance_detail.html.tera  bookinstance_list.html.tera  books_list.html.tera  genre_detail.html.tera  genre_list.html.tera  index.html.tera
