[package]
name = "library_of_murmas"
version = "0.1.0"
authors = ["Atom <ismenius@gmail.com>"]

edition="2021"
[dependencies]
rocket = "0.4.0-rc.2"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "0.4.0-rc.2"
default-features = false
features = ["tera_templates", "serve"]

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]