[package]
name = "library_of_murmas"
version = "0.1.0"
authors = ["Atom <ismenius@gmail.com>"]

edition="2021"
[dependencies]
rocket = "0.5.0-rc.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync", ]

[dependencies.bson]
version = "2.1.0"
features = ["chrono-0_4"]
